--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,34 @@
+*{
+    box-sizing: border-box;
+}
+
+button{
+    cursor: pointer;
+}
+
+html, body{
+    margin: 0;
+    background-image: linear-gradient(45deg, #9df8fa, #bf9dfa);
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+}
 body{
     text-align: center;
+}
+
+.container{
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 h1{
     font-size: 40px;
     font-family: 'Alfa Slab One', sans-serif;
+    font-variant: small-caps;
     margin: 10px;
+    color: #030f91;
+    text-shadow: 0px 0px 1px #000;
 }
 
 .work-container{
@@ -15,4 +38,35 @@ h1{
     border: 3px solid black;
     border-radius: 5px;
     padding: 10px;
+    visibility: hidden;
+}
+.dates{
+    display: flex;
+    justify-content: space-around;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.main-btn{
+    border: none;
+    background: #47ba52;
+    color: whitesmoke;
+    /* text-shadow: 0px 0px 1px #264a29; */
+    padding: 0.75em;
+    border-radius: 1em;
+    text-align: center;
+    margin: 0.75em auto;
+    display: block;
+}
+
+.today-btn{
+    background-color: #fcc647;
+    border: none;
+    border-radius: 50%;
+}
+
+input[type="date"]{
+    padding: 0.25em;
+    border: none;
+    border-radius: 0.5em;
 }
