--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html, body{
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     text-align: center;
@@ -72,10 +73,52 @@ input[type="date"]{
 }
 
 .value-field{
-    margin: 0.5em 0;
+    margin: 0.5em auto;
+    max-width: 200px;
+    display: flex;
+    height: 2em;
 }
-.value-input{
+
+.val-btn{
+    margin: 0 0 0 10px;
+    display: inline-block;
+    line-height: normal;
+    width: 1.75em;
+    height: 1.75em;
+    font-weight: bold;
+    background: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 0.75rem;
+}
+.val-submit-btn{
+    color: #47ba52;
+    text-shadow: 0px 0px 1px #47ba52;
+}
+.val-delete-btn{
+    color:  #fb4018;
+    background-color: transparent;
+    border: 1px solid #fff;
+    text-shadow: 0px 0px 1px #fb4018;
+}
+.val-p, .value-input{
     padding: 0.25em;
+    font-size: 1rem;
     border-radius: 0.5em;
     border: none;
+    width: 60px;
+    background: white;
+    height: 1.5em;
+    text-align: left;
+    border: 1px solid #fff;
+}
+.val-p{
+    background-color: transparent;
+    color: #030f91;
+}
+form{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
 }
