--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/* 
+Color Theme:
+    Red: #e63946
+    Green: #109648
+    Lighter Blue: #a8dadc
+    Purple: #4e4187
+    Blue: #3083dc
+    White: whitesmoke
+*/
 *{
     box-sizing: border-box;
 }
@@ -8,11 +17,11 @@ button{
 
 html, body{
     margin: 0;
-    background-image: linear-gradient(45deg, #9df8fa, #bf9dfa);
+    background-image: linear-gradient(45deg, #a8dadc, #3083dc);
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 body{
     text-align: center;
@@ -25,11 +34,12 @@ body{
 
 h1{
     font-size: 3rem;
-    font-family: 'Alfa Slab One', sans-serif;
+    font-family: inherit;
+    font-weight: 900;
     font-variant: small-caps;
     margin: 10px;
-    color: #030f91;
-    text-shadow: 0px 0px 1px #000;
+    color: #4e418c;
+    text-shadow: 0px 0px 2px #000;
 }
 
 .work-container{
@@ -50,7 +60,9 @@ h1{
 
 .main-btn{
     border: none;
-    background: #47ba52;
+    font-family: inherit;
+    font-weight: 400;
+    background: #109648;
     color: whitesmoke;
     /* text-shadow: 0px 0px 1px #264a29; */
     padding: 0.75em;
@@ -61,15 +73,19 @@ h1{
 }
 
 .today-btn{
-    background-color: #fcc647;
+    background-color: #EFCA08;
     border: none;
     border-radius: 50%;
 }
 
 input[type="date"]{
+    background: whitesmoke;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     padding: 0.25em;
     border: none;
     border-radius: 0.5em;
+    cursor: pointer;
 }
 
 .value-field{
@@ -92,14 +108,13 @@ input[type="date"]{
     font-size: 0.75rem;
 }
 .val-submit-btn{
-    color: #47ba52;
-    text-shadow: 0px 0px 1px #47ba52;
+    background-color: #109648;
+    color: whitesmoke;
 }
 .val-delete-btn{
-    color:  #fb4018;
-    background-color: transparent;
+    background-color: #e63946;
+    color: whitesmoke;
     border: 1px solid #fff;
-    text-shadow: 0px 0px 1px #fb4018;
 }
 .val-p, .value-input{
     padding: 0.25em;
