--- a/styles.css
+++ b/styles.css
@@ -145,14 +145,30 @@ form{
 }
 .reset-btn{
     display: none;
+    margin: 10px 0;
 }
 .extras {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
+.spacer{
+    width: 0%;
+}
+
 .checkbox{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .hidden-btn{
     display: none;
+}
+input[type="checkbox"]{
+    margin-bottom: 0px;
+}
+.checkbox p {
+    margin-top: 0px;
+    font-size: 0.75rem;
 }
